add third section
section about us + slider

--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
     <section class="services">
         <div class="services__wrapper">
             <div class="services__about">
-                <h2 class="services__title">
+                <h2 class="title">
                     services
                 </h2>
-                <hr class="divider">
-                <p class="services__text">
+                <p class="text">
                     We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
                 </p>
             </div>
@@ -101,6 +100,62 @@
                 </div>
             </div>   
         </div>      
-   </section>
+    </section>
+    <section class="about-us services ">
+        <div class="about-us__wrapper">
+            <div class="services__about">
+                <h2 class="title">
+                    services
+                </h2>
+                <p class="text">
+                    We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
+                </p>
+            </div>
+            <div class="about-us__slider">
+                <div class="staff-item">
+                    <img src="./img/head_of_ideas.jpg" alt="image of typography" width="250" height="250">
+                    <h3 class="item-title">
+                        Md. Khalil Uddin
+                    </h3>
+                    <p class="item-text">
+                        Head of Ideas
+                    </p>
+                </div>
+                <div class="staff-item">
+                    <img src="./img/lwp_developer.jpg" alt="image of code" width="250" height="250">
+                    <h3 class="item-title">
+                        Rubel Miah
+                    </h3>
+                    <p class="item-text">
+                        Lead WordPress Developer
+                    </p>
+                </div>
+                <div class="staff-item">
+                    <img src="./img/web_developer.jpg" alt="image of support" width="250" height="250">
+                    <h3 class="item-title">
+                        Shamim Mia
+                    </h3>
+                    <p class="item-text">
+                        Sr. Web Developer
+                    </p>
+                </div>
+                <div class="staff-item">
+                    <img src="./img/fe_developer.jpg" alt="image of support" width="250" height="250">
+                    <h3 class="item-title">
+                        John Doe
+                    </h3>
+                    <p class="item-text">
+                        Front-end Developer
+                    </p>
+                </div>
+                <button class="btn-slider prev">
+
+                </button>
+                <button class="btn-slider next ">
+
+                </button>
+            </div>   
+        </div>      
+    </section>
 </body>
 </html>
