--- a/index.html
+++ b/index.html
@@ -111,9 +111,24 @@
                     We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
                 </p>
             </div>
-            <div class="about-us__slider">
-                <div class="staff-item">
-                    <img src="./img/head_of_ideas.jpg" alt="image of typography" width="250" height="250">
+                <p class="col-count">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
+                    At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+                    Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
+                    At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+                    Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+                </p>
+            <div class="about-us__slider">  
+                <div class="staff-card">
+                    <div class="staff-img-first staff-bg">
+                        <!-- <div class="social">
+                            <a href=""><img src="img/facebook-logo.png" alt=""></a>
+                            <a href=""><img src="img/twitter-logo.png" alt=""></a>
+                            <a href=""><img src="img/google_plus_logo.png" alt=""></a>
+                            <a href=""><img src="img/linkedin_logo.png" alt=""></a>
+                        </div> -->
+                    </div>
                     <h3 class="item-title">
                         Md. Khalil Uddin
                     </h3>
@@ -121,8 +136,10 @@
                         Head of Ideas
                     </p>
                 </div>
-                <div class="staff-item">
-                    <img src="./img/lwp_developer.jpg" alt="image of code" width="250" height="250">
+                <div class="staff-card">
+                    <div class="staff-img-second staff-bg">
+                        <!-- <img src="./img/lwp_developer.jpg" alt="image of lwp_developer" width="250" height="250"> -->
+                    </div>
                     <h3 class="item-title">
                         Rubel Miah
                     </h3>
@@ -130,8 +147,10 @@
                         Lead WordPress Developer
                     </p>
                 </div>
-                <div class="staff-item">
-                    <img src="./img/web_developer.jpg" alt="image of support" width="250" height="250">
+                <div class="staff-card">
+                    <div class="staff-img-third staff-bg">
+                        <!-- <img  class="lll" src="./img/web_developer.jpg" alt="image of web_developer" width="250" height="250"> -->
+                    </div>
                     <h3 class="item-title">
                         Shamim Mia
                     </h3>
@@ -139,8 +158,10 @@
                         Sr. Web Developer
                     </p>
                 </div>
-                <div class="staff-item">
-                    <img src="./img/fe_developer.jpg" alt="image of support" width="250" height="250">
+                <div class="staff-card">
+                    <div class="staff-img-fourth staff-bg">
+                        <!-- <img src="./img/fe_developer.jpg" alt="image of fe_developer" width="250" height="250"> -->
+                    </div>
                     <h3 class="item-title">
                         John Doe
                     </h3>
@@ -148,12 +169,8 @@
                         Front-end Developer
                     </p>
                 </div>
-                <button class="btn-slider prev">
-
-                </button>
-                <button class="btn-slider next ">
-
-                </button>
+                <button class="btn-slider prev disable"></button>
+                <button class="btn-slider next "></button>
             </div>   
         </div>      
     </section>
