added effect hover

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
     </section>
     <section class="services">
-        <div class="services__wrapper">
-            <div class="services__about">
+        <div class="wrapper">
+            <div class="services__about content-header">
                 <h2 class="title">
                     services
                 </h2>
@@ -101,33 +101,43 @@
             </div>   
         </div>      
     </section>
-    <section class="about-us services ">
-        <div class="about-us__wrapper">
-            <div class="services__about">
+    <section class="about-us">
+        <div class="wrapper">
+            <div class="about-us content-header">
                 <h2 class="title">
-                    services
+                   about us
                 </h2>
                 <p class="text">
-                    We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
                 </p>
             </div>
-                <p class="col-count">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
-                    At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-                    Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
-                    At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-                    Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
-                </p>
+            <article class="col-count">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
+                At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+                Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. 
+                At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+                Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
+            </article>
             <div class="about-us__slider">  
-                <div class="staff-card">
+                <article class="staff-card">
                     <div class="staff-img-first staff-bg">
-                        <!-- <div class="social">
-                            <a href=""><img src="img/facebook-logo.png" alt=""></a>
-                            <a href=""><img src="img/twitter-logo.png" alt=""></a>
-                            <a href=""><img src="img/google_plus_logo.png" alt=""></a>
-                            <a href=""><img src="img/linkedin_logo.png" alt=""></a>
-                        </div> -->
+                        <div class="effect">
+                            <div class="social">
+                                <a class="social-link active" href="http://facebook.com" target="blank">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="http://twitter.com" target="blank">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                </a>
+                                <a class="social-link"href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <h3 class="item-title">
                         Md. Khalil Uddin
@@ -135,10 +145,25 @@
                     <p class="item-text">
                         Head of Ideas
                     </p>
-                </div>
-                <div class="staff-card">
+                </article>
+                <article class="staff-card">
                     <div class="staff-img-second staff-bg">
-                        <!-- <img src="./img/lwp_developer.jpg" alt="image of lwp_developer" width="250" height="250"> -->
+                        <div class="effect">
+                            <div class="social">
+                                <a class="social-link active" href="http://facebook.com" target="blank">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="http://twitter.com" target="blank">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                </a>
+                                <a class="social-link"href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <h3 class="item-title">
                         Rubel Miah
@@ -146,10 +171,25 @@
                     <p class="item-text">
                         Lead WordPress Developer
                     </p>
-                </div>
-                <div class="staff-card">
+                </article>
+                <article class="staff-card">
                     <div class="staff-img-third staff-bg">
-                        <!-- <img  class="lll" src="./img/web_developer.jpg" alt="image of web_developer" width="250" height="250"> -->
+                        <div class="effect">
+                            <div class="social">
+                                <a class="social-link active" href="http://facebook.com" target="blank">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="http://twitter.com" target="blank">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                </a>
+                                <a class="social-link"href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <h3 class="item-title">
                         Shamim Mia
@@ -157,10 +197,25 @@
                     <p class="item-text">
                         Sr. Web Developer
                     </p>
-                </div>
-                <div class="staff-card">
+                </article>
+                <article class="staff-card">
                     <div class="staff-img-fourth staff-bg">
-                        <!-- <img src="./img/fe_developer.jpg" alt="image of fe_developer" width="250" height="250"> -->
+                        <div class="effect">
+                            <div class="social">
+                                <a class="social-link active" href="http://facebook.com" target="blank">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="http://twitter.com" target="blank">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                </a>
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                </a>
+                                <a class="social-link"href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <h3 class="item-title">
                         John Doe
@@ -168,7 +223,7 @@
                     <p class="item-text">
                         Front-end Developer
                     </p>
-                </div>
+                </article>
                 <button class="btn-slider prev disable"></button>
                 <button class="btn-slider next "></button>
             </div>   
