--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="services__advantages">
                 <div class="advantages-item">
-                    <img src="./img/item-typography.png" alt="image of typography" width="90" height="90">
+                    <img src="./img/item-typography.png" alt="image-of-typography" width="90" height="90">
                     <h3 class="item-title">
                         Clean Typography
                     </h3>
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="advantages-item">
-                    <img src="./img/item-code.png" alt="image of code" width="90" height="90">
+                    <img src="./img/item-code.png" alt="image-of-code" width="90" height="90">
                     <h3 class="item-title">
                         Rock Solid Code
                     </h3>
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                 <div class="advantages-item">
-                    <img src="./img/item-support.png" alt="image of support" width="90" height="90">
+                    <img src="./img/item-support.png" alt="image-of-support" width="90" height="90">
                     <h3 class="item-title">
                         Expert Support
                     </h3>
@@ -103,7 +103,7 @@
     </section>
     <section class="about-us">
         <div class="wrapper">
-            <div class="about-us content-header">
+            <div class="content-header">
                 <h2 class="title">
                    about us
                 </h2>
@@ -130,10 +130,10 @@
                                 <a class="social-link" href="http://twitter.com" target="blank">
                                     <img class="social-img" src="img/twitter-logo.png" alt="">
                                 </a>
-                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
                                     <img class="social-img" src="img/google_plus_logo.png" alt="">
                                 </a>
-                                <a class="social-link"href="http://linkedin.com" target="blank">
+                                <a class="social-link" href="http://linkedin.com" target="blank">
                                     <img class="social-img" src="img/linkedin_logo.png" alt="">
                                 </a>
                             </div>
@@ -151,16 +151,16 @@
                         <div class="effect">
                             <div class="social">
                                 <a class="social-link active" href="http://facebook.com" target="blank">
-                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="logo-of-facebook">
                                 </a>
                                 <a class="social-link" href="http://twitter.com" target="blank">
-                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="logo-of-twitter">
                                 </a>
-                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
-                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="logo-of-google-plus">
                                 </a>
-                                <a class="social-link"href="http://linkedin.com" target="blank">
-                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                <a class="social-link" href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="logo-of-linkedin">
                                 </a>
                             </div>
                         </div>
@@ -177,16 +177,16 @@
                         <div class="effect">
                             <div class="social">
                                 <a class="social-link active" href="http://facebook.com" target="blank">
-                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="logo-of-facebook">
                                 </a>
                                 <a class="social-link" href="http://twitter.com" target="blank">
-                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="logo-of-twitter">
                                 </a>
-                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
-                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="logo-of-google-plus">
                                 </a>
-                                <a class="social-link"href="http://linkedin.com" target="blank">
-                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                <a class="social-link" href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="logo-of-linkedin">
                                 </a>
                             </div>
                         </div>
@@ -203,16 +203,16 @@
                         <div class="effect">
                             <div class="social">
                                 <a class="social-link active" href="http://facebook.com" target="blank">
-                                    <img class="social-img" src="img/facebook-logo.png" alt="">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="logo-of-facebook">
                                 </a>
                                 <a class="social-link" href="http://twitter.com" target="blank">
-                                    <img class="social-img" src="img/twitter-logo.png" alt="">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="logo-of-twitter">
                                 </a>
-                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?hl=uk&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
-                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
+                                <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="logo-of-google-plus">
                                 </a>
-                                <a class="social-link"href="http://linkedin.com" target="blank">
-                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
+                                <a class="social-link" href="http://linkedin.com" target="blank">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="logo-of-linkedin">
                                 </a>
                             </div>
                         </div>
