--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./normalize.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <section class="promo">
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                 <div class="advantages-item">
-                    <img src="./img/item-support.png" alt="image-of-support" width="90" height="90">
+                    <img src="./img/item-support.png" alt="image of support" width="90" height="90">
                     <h3 class="item-title">
                         Expert Support
                     </h3>
@@ -151,16 +151,16 @@
                         <div class="effect">
                             <div class="social">
                                 <a class="social-link active" href="http://facebook.com" target="blank">
-                                    <img class="social-img" src="img/facebook-logo.png" alt="logo-of-facebook">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="http://twitter.com" target="blank">
-                                    <img class="social-img" src="img/twitter-logo.png" alt="logo-of-twitter">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
-                                    <img class="social-img" src="img/google_plus_logo.png" alt="logo-of-google-plus">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="http://linkedin.com" target="blank">
-                                    <img class="social-img" src="img/linkedin_logo.png" alt="logo-of-linkedin">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -203,16 +203,16 @@
                         <div class="effect">
                             <div class="social">
                                 <a class="social-link active" href="http://facebook.com" target="blank">
-                                    <img class="social-img" src="img/facebook-logo.png" alt="logo-of-facebook">
+                                    <img class="social-img" src="img/facebook-logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="http://twitter.com" target="blank">
-                                    <img class="social-img" src="img/twitter-logo.png" alt="logo-of-twitter">
+                                    <img class="social-img" src="img/twitter-logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="blank">
-                                    <img class="social-img" src="img/google_plus_logo.png" alt="logo-of-google-plus">
+                                    <img class="social-img" src="img/google_plus_logo.png" alt="">
                                 </a>
                                 <a class="social-link" href="http://linkedin.com" target="blank">
-                                    <img class="social-img" src="img/linkedin_logo.png" alt="logo-of-linkedin">
+                                    <img class="social-img" src="img/linkedin_logo.png" alt="">
                                 </a>
                             </div>
                         </div>
